# valkey-search

./: .clang-tidy  .clangd  .coderabbit.yaml  .gitignore  00-RELEASENOTES  BACKPORTING.md  BUILD_cmake.md  CLAUDE.md  CMakeLists.txt  COMMANDS.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPER.md  GOVERNANCE.md  MAINTAINERS.md  MODULE.bazel  QUICK_START.md  README.md  Release-notes.md  THIRD_PARTY_LICENSES  THIRD_PARTY_NOTICES  TSAN_BUILD_ISSUE_TRACKING.md  backport-pr-description.md  build.sh  dco.txt  dco_remediation_commit.txt  test_detail.xml  test_ft_explaincli.cc  valkey-search.code-workspace
fuzzing/common/: CMakeLists.txt  fuzz_common.cc  fuzz_common.h
fuzzing/expr/: CMakeLists.txt  expr.dict  fuzz_expr.cc
fuzzing/query_parser/: CMakeLists.txt  fuzz_query_parser.cc  query.dict
src/: BUILD  CMakeLists.txt  acl.cc  acl.h  attribute.cc  attribute.h  attribute_data_type.cc  attribute_data_type.h  filter_expr.cc  filter_expr.h  index_schema.cc  index_schema.h  index_schema.proto  keyspace_event_manager.cc  keyspace_event_manager.h  metrics.h  module_loader.cc  multi_language.h  rdb_section.proto  rdb_serialization.cc  rdb_serialization.h  schema_manager.cc  schema_manager.h  server_events.cc  valkey_search.cc  valkey_search.h  valkey_search_config.cc  valkey_search_config.h  valkey_search_options.cc  valkey_search_options.h  vector_externalizer.cc  vector_externalizer.h  vector_registry.cc  vector_registry.h  version.h
src/commands/: BUILD  CMakeLists.txt  commands.cc  commands.h  filter_parser.cc  filter_parser.h  ft._debug.json  ft._list.json  ft.aggregate.json  ft.alias.json  ft.aliasadd.json  ft.aliasdel.json  ft.aliaslist.json  ft.aliasupdate.json  ft.create.json  ft.dropindex.json  ft.explaincli.json  ft.hybrid.json  ft.info.json  ft.search.json  ft_aggregate.cc  ft_aggregate.h  ft_aggregate_exec.cc  ft_aggregate_exec.h  ft_aggregate_parser.cc  ft_aggregate_parser.h  ft_alias.cc  ft_alias_add.cc  ft_alias_consistency.h  ft_alias_del.cc  ft_alias_list.cc  ft_alias_update.cc  ft_create.cc  ft_create_info.cc  ft_create_parser.cc  ft_create_parser.h  ft_debug.cc  ft_debug.h  ft_debug_indexstats.cc  ft_debug_indexstats.h  (+14 more)
src/coordinator/: CMakeLists.txt  client.cc  client.h  client_pool.h  coordinator.proto  grpc_suspender.h  info_converter.cc  info_converter.h  metadata_manager.cc  metadata_manager.h  search_converter.cc  search_converter.h  server.cc  server.h  util.h
src/expr/: BUILD  CMakeLists.txt  expr.cc  expr.h  value.cc  value.h
src/indexes/: CMakeLists.txt  bfloat16.h  composed_iterators.cc  composed_iterators.h  fp16.h  geo.cc  geo.h  geoshape.cc  geoshape.h  geoshape_rtree.cc  geoshape_rtree.h  global_metrics.h  index_base.cc  index_base.h  key_attr_value.cc  key_attr_value.h  metric_types.h  negate_fetcher.cc  negate_fetcher.h  numeric.cc  numeric.h  stemmer.cc  stemmer.h  tag.cc  tag.h  text.cc  text.h  text_index.cc  text_index.h  text_old.cc  universal_set_fetcher.cc  universal_set_fetcher.h  vector_base.cc  vector_base.h  vector_flat.cc  vector_flat.h  vector_hnsw.cc  vector_hnsw.h  vector_type.cc  vector_type.h
src/query/: CMakeLists.txt  broadcast_template.h  cluster_info_fanout.cc  cluster_info_fanout.h  cluster_info_fanout_operation.cc  cluster_info_fanout_operation.h  content_resolution.cc  content_resolution.h  create_consistency_check_fanout_operation.cc  create_consistency_check_fanout_operation.h  drop_consistency_check_fanout_operation.cc  drop_consistency_check_fanout_operation.h  fanout.cc  fanout.h  fanout_operation_base.h  fanout_template.h  fusion.cc  fusion.h  inflight_retry.cc  inflight_retry.h  info_fanout.cc  info_fanout.h  multi_search.cc  multi_search.h  partition_results_tracker_base.h  planner.cc  planner.h  predicate.cc  predicate.h  primary_info_fanout.cc  primary_info_fanout.h  primary_info_fanout_operation.cc  primary_info_fanout_operation.h  response_generator.cc  response_generator.h  search.cc  search.h
src/utils/: BUILD  CMakeLists.txt  allocator.cc  bloom_filter.h  cancel.cc  cancel.h  geohash.cc  geohash.h  hyperloglog.c  hyperloglog.h  hyperloglog_counter.cc  hyperloglog_counter.h  inlined_multiset.h  inlined_priority_queue.h  lru.h  memory_pool.cc  memory_pool.h  numeric_btree.h  patricia_tree.h  scanner.h  segment_tree.h  string_interning.cc  string_interning.h  utf8_iterator.h
testing/: BUILD  CMakeLists.txt  acl_test.cc  aggregate.py  attribute_data_type_test.cc  common.cc  common.h  filter_test.cc  find_vector_delimiter_test.cc  flat_position_map_test.cc  ft_aggregate_exec_test.cc  ft_aggregate_parser_test.cc  ft_alias_commands_test.cc  ft_create_parser_test.cc  ft_create_test.cc  ft_debug_indexstats_test.cc  ft_dropindex_test.cc  ft_explaincli_test.cc  ft_info_test.cc  ft_list_test.cc  ft_search_parser_test.cc  ft_search_test.cc  geo_parser_test.cc  global_metrics_test.cc  index_schema_test.cc  keyspace_event_manager_test.cc  language_processor_test.cc  lexer_test.cc  multi_exec_test.cc  numeric_index_test.cc  posting_memory_allocation_test.cc  posting_test.cc  qma_weight_parser_test.cc  radix_test.cc  rax_wrapper_test.cc  rdb_serialization_test.cc  schema_manager_alias_property_test.cc  schema_manager_test.cc  search_converter_test.cc  search_test.cc  (+16 more)
testing/commands/: ft_internal_update_test.cc
testing/compatibility/: aggregate.py
testing/coordinator/: CMakeLists.txt  client_test.cc  common.h  info_client_server_test.cc  info_client_test.cc  info_converter_test.cc  info_index_partition_client_test.cc  info_index_partition_integration_test.cc  metadata_manager_test.cc  multi_search_test.cc
testing/expr/: BUILD  CMakeLists.txt  expr_test.cc  value_test.cc
testing/integration/: CMakeLists.txt  compatibility.py  ft_internal_update_integration_test.py  requirements.txt  run.sh  stability_runner.py  stability_test.py  utils.py  vector_search_integration_test.py
testing/query/: CMakeLists.txt  content_resolution_test.cc  fanout_test.cc  fusion_test.cc  multi_search_test.cc  response_generator_test.cc  text_scoring_test.cc
testing/scoring/: bm25std_scorer_test.cc  scoring_session_test.cc  (+2 more)
(+466 files in other folders)
